# PandanticAI-news

./: hello.py  pyproject.toml  test_sources.py  web_scraper_back.py
agents/: coordinator.py  hello_world.py  sources.py  web_scraper.py
chatbot/: package-lock.json  package.json
chatbot/src/: App.js
chatbot/src/components/: HelloWorldGenerator.jsx  NewsAggregator.jsx  NewsSearcher.jsx  SourcesGenerator.jsx
chatbot/src/components/layout/: Navbar.jsx
prompts/: 01_costar_question_list.md  news_sources.md
