[project]
name = "pydanticprojects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "groq>=0.18.0",
    "instructor>=1.7.3",
    "openai>=1.65.4",
    "pydantic-ai[examples,logfire]>=0.0.36",
]
